--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,9 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+build/
+.idea/
+.packages
+.flutter-plugins
+.flutter-plugins-dependencies
+.dart_tool/
